<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pharmacy_home"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/pha_account"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:onClick="pha_account"
            android:backgroundTint="@color/blue5"
            android:text="@string/pharmacy_account"
            android:textColor="@color/white"
            app:cornerRadius="20dp"/>

        <Button
            android:id="@+id/drug_req"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:backgroundTint="@color/blue5"
            app:cornerRadius="20dp"
            android:onClick="dug_reqs"
            android:text="@string/drug_requests"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/inventory"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:backgroundTint="@color/blue5"
            app:cornerRadius="20dp"
            android:onClick="inv"
            android:text="@string/inventory"
            android:textColor="@color/white"
            />

        <Button
            android:id="@+id/add_inventory"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:backgroundTint="@color/blue5"
            app:cornerRadius="20dp"
            android:onClick="add_inv"
            android:text="@string/add_inventory"
            android:textColor="@color/white"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>