<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue1"
        tools:context=".cus_myaccount"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="55dp">

        <TextView
            android:id="@+id/app_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <ImageButton
            android:id="@+id/bck_btn_home"
            android:layout_width="46dp"
            android:layout_height="45dp"
            android:backgroundTint="@color/blue1"
            android:onClick="bckTohome"
            app:layout_constraintBottom_toBottomOf="@+id/app_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.043"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/bck_btn" />

        <androidx.cardview.widget.CardView
            android:id="@+id/myacc_cardview"
            android:layout_width="364dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="43dp"
            android:background="@color/white"
            app:cardCornerRadius="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/app_name"
            tools:ignore="MissingConstraints">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_editor_absoluteX="58dp"
                app:layout_editor_absoluteY="10dp"
                tools:ignore="MissingConstraints">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    app:layout_constraintTop_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="MissingConstraints">

                    <TextView
                        android:id="@+id/myacc_head"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="40sp"
                        android:text="@string/acc_head"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                    <!--Fname-->
                    <TextView
                        android:id="@+id/my_acc_fname"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="40sp"
                        android:text="@string/acc_fname"
                        android:textAlignment="textStart"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="normal" />

                    <EditText
                        android:id="@+id/my_acc_edt_fname"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:hint="First name"
                        android:inputType="textPersonName"
                        android:padding="8dp"
                        android:textColor="@color/black"/>

                    <!--Email-->
                    <TextView
                        android:id="@+id/my_acc_email"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="20sp"
                        android:text="@string/acc_Email"
                        android:textAlignment="textStart"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="normal" />

                    <EditText
                        android:id="@+id/my_acc_edt_email"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:hint="First name"
                        android:inputType="textPersonName"
                        android:padding="8dp"
                        android:textColor="@color/black"/>

                    <!--Phone-->
                    <TextView
                        android:id="@+id/my_acc_phone"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="20sp"
                        android:text="@string/acc_Phone"
                        android:textAlignment="textStart"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="normal" />

                    <EditText
                        android:id="@+id/my_acc_edt_phone"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:hint="Phone"
                        android:inputType="textPersonName"
                        android:padding="8dp"
                        android:textColor="@color/black"/>

                    <!--Address-->
                    <TextView
                        android:id="@+id/my_acc_Address"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="20sp"
                        android:text="@string/acc_address"
                        android:textAlignment="textStart"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="normal" />

                    <EditText
                        android:id="@+id/my_acc_edt_Address"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:hint="Address"
                        android:inputType="textPersonName"
                        android:padding="8dp"
                        android:textColor="@color/black"/>

                    <!--Image-->


                </LinearLayout>
            </ScrollView>
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/my_Acc_Edit"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/white"
            android:padding="8dp"
            android:text="@string/acc_edit"
            android:onClick="editmyacc"
            android:textColor="@color/blue5"
            app:cornerRadius="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/myacc_cardview"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/my_Acc_Delete"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/white"
            android:padding="8dp"
            android:onClick="btnDeleteAcc"
            android:text="@string/acc_delete"
            android:textColor="@color/blue5"
            app:cornerRadius="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/my_Acc_Edit"
            tools:ignore="MissingConstraints" />



    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>