<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.home.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="203dp"
                android:background="@drawable/gradient_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!--            <ImageView-->
<!--                android:id="@+id/imageView"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="143dp"-->
<!--                android:layout_marginTop="100dp"-->
<!--                app:layout_constraintEnd_toEndOf="parent"-->
<!--                app:layout_constraintHorizontal_bias="1.0"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintTop_toTopOf="parent"-->
<!--                app:srcCompat="@drawable/medicine_delivery_trends" />-->


            <TextView
                android:id="@+id/title1"
                android:layout_width="wrap_content"
                android:layout_height="31dp"
                android:layout_marginStart="150dp"
                android:layout_marginEnd="150dp"
                android:text="@string/title"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.004" />

            <TextView
                android:id="@+id/find_near_drug"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="60dp"
                android:layout_marginEnd="50dp"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:onClick="serch"
                android:text="@string/title1"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/card"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <androidx.cardview.widget.CardView
                android:id="@+id/card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/find_near_drug"
                app:cardElevation="6dp"
                app:cardCornerRadius="5dp"
                android:layout_margin="20dp"
                >

                <com.denzcoskun.imageslider.ImageSlider
                    android:id="@+id/image_slider"
                    android:layout_width="match_parent"
                    android:layout_height="210dp"
                    app:iss_auto_cycle="true"
                    app:iss_period="2500"
                    app:iss_delay="8"

                    />

            </androidx.cardview.widget.CardView>




            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:gravity="center"
                android:text="@string/find"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/drag_add"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.036"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/card"
                app:layout_constraintVertical_bias="0.555" />

            <androidx.cardview.widget.CardView
                android:id="@+id/drag_add"
                android:layout_width="340dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:cardCornerRadius="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView9">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <EditText
                        android:id="@+id/adddrgname"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginTop="10dp"
                        android:ems="10"
                        android:hint="@string/getname"
                        android:inputType="textPersonName" />

                    <EditText
                        android:id="@+id/adddrgDesc"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginTop="10dp"
                        android:ems="10"
                        android:hint="@string/description"
                        android:inputType="textPersonName" />

                    <ImageView
                        android:id="@+id/adImage"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginTop="10dp"
                        app:srcCompat="@drawable/baseline_image_24" />

                    <TextView
                        android:id="@+id/addimagehint"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:text="@string/prescription" />

                    <Button
                        android:id="@+id/adddrgtopharmacy"
                        android:layout_width="250dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:backgroundTint="@color/blue4"
                        android:text="@string/add"
                        app:cornerRadius="20dp" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/drag_edit"
                android:layout_width="340dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:cardCornerRadius="5dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/drag_add"
                >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:layout_editor_absoluteX="-5dp"
                    tools:layout_editor_absoluteY="47dp"
                    android:layout_marginBottom="50dp"
                    app:layout_constraintTop_toBottomOf="@id/drag_add">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/drag_finder"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"

                        tools:listitem="@layout/medicinlayout">

                    </androidx.recyclerview.widget.RecyclerView>

                </RelativeLayout>



            </androidx.cardview.widget.CardView>


        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>